[project]
name = "review-sentiment-env"
version = "0.1.0"
description = "OpenEnv Trust & Safety review sentiment environment"
authors = [
    { name = "Shankar" },
    { name = "Manoj Kumar R" },
    { name = "Paritosh N" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]